# oracc1

./: Makefile.am  README  README.md  configure.ac  mac-config.sh  oracc-am-rules.txt  oracc-doc-install.sh  oracc-doc-rules.txt  oracc-subst.sh  oracc.sed
c/l2/bigrams/: Makefile.am
c/l2/prop/: Makefile.am
c/l2/psus/: Makefile.am
c/l2/xli/: Makefile.am
c/lib/: Makefile.am
c/lib/oracc/: Makefile.am
c/otf/atf/: Makefile.am
c/otf/gdl/: Makefile.am  graphemes.c
c/otf/lib/: Makefile.am  xmlnames.c  xmlnames.h
c/otf/otf/: Makefile.am
c/otf/ox/: Makefile.am
c/otf/prj/: Makefile.am
c/otf/run/: Makefile.am
doc/ns/gdl/1.0/: gdl.xdf
misc/: Makefile.am
misc/agg/: agg-proxify.plx.in
misc/epsd/: epsd  epsdsl
misc/g2plus/: g2plus-index-akkadian.xsl
misc/o2/: o2-esp.sh
misc/web/: web-p2colours.plx
misc/xdf/: xdfmanager.plx.in
oracc-hyperestraier/: Makefile.am
